# inscription

./: .gitignore  README.md  pyproject.toml
book/: book.toml
docs/: github-pages.md  inscription-v0-spec.md  inscription-v0.1-spec.md  inscription-v0.10-spec.md  inscription-v0.11-spec.md  inscription-v0.12-spec.md  inscription-v0.13-spec.md  inscription-v0.14-spec.md  inscription-v0.15-spec.md  inscription-v0.16-spec.md  inscription-v0.17-spec.md  inscription-v0.18-spec.md  inscription-v0.19-spec.md  inscription-v0.2-spec.md  inscription-v0.20-spec.md  inscription-v0.21-spec.md  inscription-v0.22-spec.md  inscription-v0.23-spec.md  inscription-v0.24-spec.md  inscription-v0.25-spec.md  inscription-v0.26-spec.md  inscription-v0.27-spec.md  inscription-v0.28-spec.md  inscription-v0.29-spec.md  inscription-v0.3-spec.md  inscription-v0.30-spec.md  inscription-v0.31-spec.md  inscription-v0.32-spec.md  inscription-v0.33-spec.md  inscription-v0.34-spec.md  inscription-v0.36-spec.md  inscription-v0.37-spec.md  inscription-v0.38-spec.md  inscription-v0.39-spec.md  inscription-v0.4-spec.md  inscription-v0.40-spec.md  inscription-v0.41-spec.md  inscription-v0.42-spec.md  inscription-v0.43-spec.md  inscription-v0.44-spec.md  (+26 more)
grammar/: inscription-v0.1.ebnf  inscription-v0.10.ebnf  inscription-v0.11.ebnf  inscription-v0.12.ebnf  inscription-v0.13.ebnf  inscription-v0.14.ebnf  inscription-v0.15.ebnf  inscription-v0.16.ebnf  inscription-v0.17.ebnf  inscription-v0.18.ebnf  inscription-v0.19.ebnf  inscription-v0.2.ebnf  inscription-v0.20.ebnf  inscription-v0.21.ebnf  (+51 more)
(+711 files in other folders)
