[project]
name = "inscription"
version = "0.65.0.dev0"
description = "Deterministic phrase-shaped compiler to MLIR/LLVM 22"
requires-python = ">=3.11"
dependencies = ["Pygments>=2.18"]

[project.optional-dependencies]
docs = ["Pygments>=2.18"]

[project.scripts]
inscription = "inscription.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
